fixing text egde cutoff Filtering Climbs

--- a/app/static/app.css
+++ b/app/static/app.css
@@ -3314,6 +3314,7 @@ object-fit: unset !important;
   box-shadow: none;
   padding: 0;
   margin-bottom: 1.5rem;
+  overflow: visible;
 }
 
 .climb-browser-card::before {
